Spacing errors fixed
Fixed images on planetsim page so that they are always centered

--- a/css/style3.css
+++ b/css/style3.css
@@ -210,37 +210,42 @@
 	max-width: 50%;
 }
 
+.imgCenter
+{
+	text-align: center;
+}
 #planets1
 {
 	max-width: 30%;
-	padding-left: 3%;
+	display: inline-block;
 }
 #planets2
 {
+	display: inline-block;
 	max-width: 100%;
 	padding-bottom: 8%;
 	padding-left: 1%;
 }
 #planets3
 {
+	display: inline-block;
 	max-width: 100%;
-	padding-left: 0%;
 }
 #planets4
 {
+	display: inline-block;
 	max-width: 50%;
-	padding-bottom: 0%;
 	padding-left: 4%;
 }
 #planets5
 {
+	display: inline-block;
 	max-width: 50%;
 	padding-bottom: 5%;
-	padding-left: 0%;
 }
 #planets6
 {
+	display: inline-block;
 	max-width: 100%;
-	padding-bottom: 0%;
-	padding-left: 0%;
 }
+
